White Background Input

--- a/sass/app.scss
+++ b/sass/app.scss
@@ -259,7 +259,7 @@ a {
 	z-index: 1 !important;
 	position: relative !important;
 	border: 3px solid $lightBlue !important;
-	background: transparent !important;
+	background: rgb(250, 250, 250) !important;
 	color: $teal !important;
 	width: 306px !important;
 	border-radius: 5px !important;
