--- a/sass/app.scss
+++ b/sass/app.scss
@@ -195,7 +195,7 @@ a {
 .prompt > .title-bar {
 	position: relative;
 	width: inherit;
-	background-color: $teal;
+	background-color: rgba(255,255,255, 0.5);
 	height: 50px;
 	top: -3px;
 }
