--- a/sass/app.scss
+++ b/sass/app.scss
@@ -93,7 +93,7 @@ $spacing: 25px;
 }
 
 .neon-input:hover + label {
-	color: $teal;
+	color: $darkBlue;
 }
 
 
@@ -116,6 +116,8 @@ footer {
 	bottom:0;
 	left:0;
 	font-family: 'Abel', sans-serif;
+	height: 60px;
+	overflow: hidden;
 }
 
 #media {
@@ -149,7 +151,6 @@ footer {
 
 #mlh-logo {
 	position: relative;
-	top: 10px;
 	height: 50px;
 }
 
@@ -286,7 +287,7 @@ a {
 
 .neon-input:hover, .neon-input:focus {
 	outline: none !important;
-	border-color:$pink!important;
+	border-color:$darkBlue!important;
 }
 
 .info-section {
@@ -297,8 +298,8 @@ a {
 }
 
 .btn:hover {
-	color: $teal ;
-	border-color: $pink;
+	color: $darkBlue ;
+	border-color: $darkBlue;
 }
 
 .light-section {
