Page 3 input stylings

--- a/views/application/page1.html
+++ b/views/application/page1.html
@@ -7,6 +7,6 @@
         <h2>'s New Hit Single</h2>
     </div>
     <div class="text-center row align-middle">
-        <button ui-sref="apply.page2" ng-click="fadeHeader = true"><span><i class="fa fa-arrow-right"></i></span> Next</button>
+        <button ng-show="application.name" ui-sref="apply.page2" ng-click="fadeHeader = true"><span><i class="fa fa-arrow-right"></i></span> Next</button>
     </div>
 </div>
