Fix Margin and Centering

--- a/views/home.html
+++ b/views/home.html
@@ -184,7 +184,7 @@
                 <div class="row">
                     <div class="small-12 columns">
                         <br><br>
-                        <h2 class="text-center">SUPPORTERS</h2>
+                        <h2>SUPPORTERS</h2>
                         <br>
                     </div>
                 </div>
