--- a/sass/app.scss
+++ b/sass/app.scss
@@ -66,6 +66,12 @@ a {
 	float: none;
 }
 
+a {
+	text-decoration: none;
+	color:inherit;
+	z-index: 1;
+}
+
 .labeled-input {
 	position: relative;
 	-webkit-box-sizing: content-box !important;
@@ -109,15 +115,14 @@ h1, h2, h3, h4, h5 {
 	color: $lightBlue;
 }
 
-footer {
+.footer {
 	position: relative;
 	margin: 20px auto;
+	margin-bottom: 0;
 	width: 100%;
-	bottom:0;
-	left:0;
 	font-family: 'Abel', sans-serif;
-	height: 60px;
 	overflow: hidden;
+
 }
 
 #media {
@@ -133,6 +138,7 @@ footer {
 #powered {
 	float: right;
 	padding-top: 50px;
+	box-sizing: content-box;
 }
 
 #powered h4 {
@@ -152,12 +158,6 @@ footer {
 #mlh-logo {
 	position: relative;
 	height: 50px;
-}
-
-a {
-	text-decoration: none;
-	color:inherit;
-	z-index: 1;
 }
 
 #logo {
