--- a/views/home.html
+++ b/views/home.html
@@ -201,7 +201,7 @@
                 </div>
             </div>
         </div>
-        <div class="footer row">
+        <div class="footer">
             <div id='powered'>
                 <h4>Powered by</h4>
                 <a href="http://hacksu.cs.kent.edu/" target="_blank"><img src="img/Hacksu_Color.svg" id="hacksu"></a>
