--- a/sass/app.scss
+++ b/sass/app.scss
@@ -151,7 +151,8 @@ h1, h2, h3, h4, h5 {
 #powered img {
 	display: inline-block;
 	height: 60px;
-	margin-right: 20px;}
+	margin-right: 20px;
+}
 
 
 
