--- a/views/404.html
+++ b/views/404.html
@@ -17,7 +17,7 @@
 
 
 <div class="row">
-  <div class="small-12 medium-6 small-centered columns">
-    <h1 class="white">Did you take a wrong turn on the way to the party? <a href="/">Home is this way.</a></h1>
+  <div class="small-12 medium-8 small-centered columns">
+    <h1 class="white">Did you take a wrong turn on the way to the party? <a href="/" style="text-decoration: underline;">Home</a> is this way.</h1>
   </div>
 </div>
