--- a/views/application/page1.html
+++ b/views/application/page1.html
@@ -8,7 +8,7 @@
   <i ui-sref="apply.page4" class="fa fa-circle-o"></i>
 </div>
 <article class="tall">
-  <h2 class="white">BASIC INFO <span class="small white">[Complete the sentence]</span></h2>
+  <h2 class="pink">BASIC INFO <span class="small teal">[Complete the sentence]</span></h2>
   I am
   <a ng-click="open('name')">{{application.name | application:'name'}}</a>,
   <div class="input text" ng-if="display.name">
