--- a/sass/application.scss
+++ b/sass/application.scss
@@ -89,7 +89,7 @@ $prompt-button: $darkBlue;
 }
 
 #application header {
-  background: rgba(0, 0, 0, 0.3);
+  background: $lightBlue;
   text-align: center;
   text-transform: uppercase;
   padding: 1rem;
