--- a/views/application/page2.html
+++ b/views/application/page2.html
@@ -8,7 +8,7 @@
   <i ui-sref="apply.page4" class="fa fa-circle-o"></i>
 </div>
 <article class="short">
-  <h2 class="white">ADDITIONAL INFO</h2>
+  <h2 class="pink">ADDITIONAL INFO</h2>
   <span class="small white">Dietary restrictions:</span>
   <a ng-click="open('dietary')" class="small">{{application.diet.selected | application:'dietary'}}</a>
   <div class="input checkbox" ng-if="display.dietary">
