--- a/views/application/page3.html
+++ b/views/application/page3.html
@@ -8,9 +8,9 @@
   <i ui-sref="apply.page4" class="fa fa-circle-o"></i>
 </div>
 <article class="short">
-  <h2 class="white">AGREEMENTS</h2>
+  <h2 class="pink">AGREEMENTS</h2>
   <div class="agreements">
-    <input id="cb-conduct" type="checkbox" ng-model="application.conduct">
+    <input id="cb-conduct" type="checkbox" ng-model="application.conduct" >
     <label for="cb-conduct">I agree to the <a href="http://static.mlh.io/docs/mlh-code-of-conduct.pdf" target="_blank">MLH Code of Conduct</a></label>
     <input id="cb-demographic" type="checkbox" ng-model="application.demographic">
     <label for="cb-demographic">I agree to allow my demographic information to be used anonymously to improve hackathons</label>
