--- a/views/application/page4.html
+++ b/views/application/page4.html
@@ -9,7 +9,7 @@
 </div>
 <article class="short">
   <div class="row">
-    <h2 class="white">SUMMARY</h2>
+    <h2 class="pink">SUMMARY</h2>
 
     <div class="small-12 large-6 columns">
       <!-- Name -->
